Bug 668756 - Allow localizing of the decimal separator used in message/file size display. r=mbanner